2010-01-11 Paul Millar <paul.millar@desy.de>
  Add support for relative paths in lookup element

2008-10-02 Paul Millar <paul.millar@desy.de>
  Make depth a parameter to allow caller to override value.
  Switch to using the path-stack and depth instead of rel-path for user-elements.

2008-09-30 Paul Millar <paul.millar@desy.de>
  Add support for a path-stack, fixes loop-in-loop.

2008-09-25 Paul Millar <paul.millar@desy.de>
  Add support for numerical predicates.
  Allow more flexible allow/suppress combinations.
  Add support for building new rel-path when conducting loops within loops.

2008-09-24 Paul Millar <paul.millar@desy.de>
  Fix comments; add a time-stamp to output.

2008-07-17 Paul Millar <paul.millar@desy.de>
  Fix default attribute check.
  Tidy up comments, indentation, error msgs.
  Be much more careful to always return default, if element isn't found.