@@ -1,0 +1,46 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<!--+
+    |  test-1 : check the empty content works OK.
+    +-->
+
+<xylophone>
+  <publish>
+    <object rdn="o">
+      <attr name="o">test-organisation</attr>
+
+      <object rdn="TestType">
+	<attr name="TestType">parent-rdn</attr>
+
+	<object rdn="test">
+	  <attr name="test">test-1</attr>
+	  
+	  <attr name="parent-rdn"><parent-rdn use='rdn' rdn="o"/></attr>
+	</object>
+
+	
+	<object rdn="test">
+	  <attr name="test">test-2</attr>
+
+	  <attr name="parent-rdn"><parent-rdn use='value' rdn="o"/></attr>
+	</object>
+
+
+	<object rdn="test">
+	  <attr name="test">test-3</attr>
+
+	  <attr name="parent-rdn"><parent-rdn use='rdn' rdn="TestType"/></attr>
+	</object>
+
+
+	<object rdn="test">
+	  <attr name="test">test-4</attr>
+
+	  <attr name="parent-rdn"><parent-rdn use='value' rdn="TestType"/></attr>
+	</object>
+
+      </object>
+
+    </object>
+  </publish>
+</xylophone>
